--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,48 @@
-body {
-    background-image: url('https://eadesign.art.br/wp-content/uploads/2016/12/fundo-criacao-de-site-rj.jpg');
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  body {
+    background-image: url('../img/fundo.jpg');
     background-size: auto 100vh;
-    font-family: Arial;
-    heigth: 100vh;
+    font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    font-size: 12px;
+  }
+
+  @media (min-width: 400px) {
+    body {
+      font-size: 14px;
+    }
+  }
+
+  @media (min-width: 600px) {
+    body {
+      font-size: 18px;
+    }
+  }
+
+  header {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
   }
   
   .menu {
     background-color: white;
+    position: fixed;
+    width: 100vw;
+    top: 0;
   }
   
+  .menu a {
+    display: block;
+    padding: 10px 20px;
+  }
+
   .menu ul {
     display: flex;
     justify-content: space-around;
@@ -34,6 +68,51 @@ body {
     text-align: center;
   }
   
+  .site-title {
+    font-size: 2em;
+    font-family: 'Shadows Into Light', cursive;
+  }
+  
   .site-subtitle {
     font-style: italic;
+    font-family: 'Shadows Into Light', cursive;
+  }
+
+  .portfolio {
+    padding: 2em;
+  }
+
+  .portfolio .grid {
+    display: grid;
+    gap: 2em; 
+  }
+  
+  @media (min-width: 600px) {
+    .portfolio .grid {
+      grid-template-columns: 240px 240px;
+    }
+  }
+
+  @media (min-width: 848px) {
+    .portfolio .grid {
+      grid-template-columns: repeat(3, 240px);
+      justify-content: center;
+      align-content: center;
+      height: calc(100vh - 4em - 48px - 1.5em);
+    }
+  }
+
+  .portfolio h2 {
+    font-family: 'Shadows Into Light', cursive;
+    color: whitesmoke;
+    margin-bottom: 2em;
+  }
+
+  .portfolio figure {
+    text-align: center;
+  }
+
+  .img-portfolio {
+    height: 180px;
+    width: 180px;
   }
